# test

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: all.yml  deploy.yml  git_version_tag.yml  github_sli.yml  jira.yml  labeler.yml  main.yml  notify.yml  s3.yml  tests.yml  upload_release_asset.yml
src/: main.py
tests/: test_main.py
tests/api/: test_1.py
tests/api/unit/: __init__.py
tests/e2e/: test_1.py
tests/integration/: test_1.py
tests/unit/: test_1.py
