[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "--cov=src", # generate coverage report for paths
    "--cov-report=html",
    # "--cov-report-path={toxinidir}/.tox/coverage",
    # "--cov-report=xml",
    "--cov-append",
    "--verbose", # vebose during test execution
    "-ra", # coverage report format to all
    "-q" # quit during test execution
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''/(\.git|\.hg|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist)/'''
extra = '--exclude "^\s*__init__.py$"'
