[metadata]
name = src
version = 1.0.0
description = some description
author = Author name
author_email = example@example.com
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
keywords = virtual, environments, isolated, testing
maintainer = Yusuke Miyazaki
maintainer_email = example@gmail.com
url = https://github.com/ymyzk/tox-gh-actions
project_urls =
    Source=https://github.com/ymyzk/tox-gh-actions
    Tracker=https://github.com/ymyzk/tox-gh-actions/issues
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages =
    src
install_requires =
    requests>=2
python_requires = >=3.7
package_dir =
    =.
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
src = py.typed

[flake8]
max-line-length = 88

[bdist_wheel]
universal = 1